# makeradmin

./: .dockerignore  .env.example  .env~  .gitignore  .pre-commit-config.yaml  .prettierignore  .travis.yml  CODEOWNERS  Makefile  README.md  create_connect.sh  create_env.py  create_stripe_products.py  create_user.py  curl.py  db_backup.py  db_backup.sh  db_init.py  db_init.sh  db_restore.py  db_restore.sh  db_upgrade.py  devel-compose.yml  devel_data.py  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  export_transactions.sh  fetch_prod_db.py  firstrun.py  local.mk  migrate.sh  mkdocs.yml  mypy.ini  mysql.sh  package-lock.json  package.json  pyproject.toml  (+8 more)
.devcontainer/: devcontainer.Dockerfile  devcontainer.json
.github/: CONTRIBUTING.md
accessy/: sync_main.py
accounting/: export_transactions.sh  transactions_monthly.py
accouting/: export_transactions.sh
admin/: DevServerDockerfile  Dockerfile  dev-server-compose.yaml  jestSetup.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
api/: Dockerfile  TestDockerfile  accessy_sync.sh  accessy_syncer.sh  dispatch_emails.sh  dispatch_messages.sh  requirements.txt  run.sh  test_run.sh
apigateway/: .gitignore  Dockerfile
backend/: Dockerfile  requirements.txt  run.sh
currentmember/: .gitignore  Dockerfile  readme.md
docs/: CNAME  Dockerfile  index.md  mkdocs.yml  requirements.txt
economy/: Dockerfile  README.md
emaildispatcher/: Dockerfile
frontend/: .gitignore  DevServerDockerfile  Dockerfile  DockerfileBase  DockerfileTest  README.md  (+10 more)
(+1678 files in other folders)
