[project]
name = "makeradmin"
version = "1.0.0"
description = "Member management system for makerspaces"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask",
    "flask-cors",
    "sqlalchemy~=2.0.0",
    "gunicorn",
    "cryptography",
    "rocky>=1,<2",
    "PyMySQL",
    "requests",
    "redis",
    "python-dotenv",
    "bcrypt",
    "stripe==7.8.2",
    "jsonschema",
    "jinja2",
    "ipython",
    "Pillow",
    "qrcode[pil]>=7.4.2",
    "Phonenumbers",
    "schedule",
    "python-dateutil",
    "types-python-dateutil",
    "types-requests",
    "types-markdown",
    "types-PyMySQL",
    "types-redis",
    "markdown",
    "NamedAtomicLock",
    "dataclasses-json",
    "pyserde",
    "pyjson5",
    "slack-sdk",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "ruff==0.15.0",
    "pre-commit",
]
test = [
    "pytest<7.2.0",
    "pytest-parallel<7.2.0",
    "selenium",
    "faker",
    "debugpy",
]

[tool.uv]
dev-dependencies = [
    "ruff==0.15.0",
    "pre-commit",
    "pytest<7.2.0",
    "pytest-parallel<7.2.0",
    "selenium",
    "faker",
    "debugpy",
]

[tool.ruff]
line-length = 120
exclude = [".venv", "api/src/i18n"]
[tool.ruff.lint]
select = [
    ## pycodestyle
    #"E",
    ## Pyflakes
    #"F",
    ## pyupgrade
    #"UP",
    ## flake8-bugbear
    #"B",
    ## flake8-simplify
    #"SIM",
    # isort
    "I",
]
ignore = [
    # Line too long: skip since we are using autoformatting
    "E501",
]
[tool.black]
line-length = 120
